--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -81,10 +81,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES ocular_interaction
-#  CATKIN_DEPENDS dialog_manager_msgs interaction_common monarch_multimodal_fusion ocular
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES ocular_interaction
+ CATKIN_DEPENDS dialog_manager_msgs interaction_common monarch_multimodal_fusion ocular
+ DEPENDS system_lib
 )
 
 ###########
@@ -161,4 +161,4 @@ include_directories(
 # endif()
 
 ## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+catkin_add_nosetests(src/test/test_ocular_translators.py)
