--- a/ocular_interaction/params/asr_commands.yaml
+++ b/ocular_interaction/params/asr_commands.yaml
@@ -1,5 +1,6 @@
 asr_commands: {adivina: recognize,
                reconoce: recognize,
+               reconozcas: recognize,
                probar: recognize,
                prueba: recognize,
                aprende: learn,
