added more learning commmands to asr_commands.yaml

--- a/ocular_interaction/params/asr_commands.yaml
+++ b/ocular_interaction/params/asr_commands.yaml
@@ -1,11 +1,14 @@
-asr_commands: {adivina: recognize,
-               reconoce: recognize,
-               reconozcas: recognize,
-               probar: recognize,
-               prueba: recognize,
-               aprende: learn,
+asr_commands: {aprender: learn,
                enseñar: learn,
-               para: finish,
+               mostrar: learn,
+               memorizar: learn,
+               estudiar: learn,
+               grabar: learn,
+               guardar: learn,
+               adivinar: recognize,
+               reconocer: recognize,
+               probar: recognize,
+               parar: finish,
                stop: finish,
                acabar: finish,
                dejalo: finish,
