--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -3,6 +3,9 @@ test-warnings: no
 strictness: medium
 max-line-length: 80
 autodetect: yes
+mccabe:
+  run: true
+  max-complexity: 7
 ignore-paths:
     - doc
     - src/test
