--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,7 @@
 # .scrutinizer.yml
-checks: 
-    python: 
+# language: python
+checks:
+    python:
         code_rating: true
         duplicate_code: true
         variables_used_before_assignment: true
@@ -100,10 +101,60 @@ checks:
         basic_bad_reversed_sequence: true
         basic_assert_on_tuple: true
         basic_abstract_class_instantiated: true
-        
+        variables_unused_wildcard_import: true
+        variables_unused_variable: true
+        variables_unused_import: true
+        variables_unused_argument: true
+        format_trailing_whitespace: true
+        format_superfluous_parens: true
+        format_line_too_long:
+            max_length: '80'
+        format_bad_whitespace: true
+        format_bad_indentation:
+            indentation: '4 spaces'
+        exceptions_pointless_except: true
+        exceptions_binary_op_exception: true
+        exceptions_bare_except: true
+        design_interface_not_implemented: true
+        design_abstract_class_not_used: true
+        design_abstract_class_little_used: true
+        classes_signature_differs: true
+        classes_protected_access: true
+        classes_non_parent_init_called: true
+        classes_no_self_use: true
+        classes_missing_interface_method: true
+        classes_method_hidden: true
+        classes_bad_staticmethod_argument: true
+        classes_bad_mcs_method_argument: true
+        classes_bad_mcs_classmethod_argument: true
+        classes_bad_classmethod_argument: true
+        classes_attribute_defined_outside_init: true
+        basic_return_outside_function: true
+        basic_return_in_init: true
+        basic_return_arg_in_generator: true
+        basic_pointless_string_statement: true
+        basic_pointless_statement: true
+        basic_old_raise_syntax: true
+        basic_missing_docstring: true
+        basic_invalid_name:
+            functions: '[a-z_][a-z0-9_]{2,30}$'
+            variables: '[a-z_][a-z0-9_]{2,30}$'
+            whitelisted_names: 'i,j,k,ex,Run,_'
+            constants: '(([A-Z_][A-Z0-9_]*)|(__.*__))$'
+            attributes: '[a-z_][a-z0-9_]{2,30}$'
+            arguments: '[a-z_][a-z0-9_]{2,30}$'
+            class_attributes: '([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$'
+            inline_vars: '[A-Za-z_][A-Za-z0-9_]*$'
+            classes: '[A-Z_][a-zA-Z0-9]+$'
+            modules: '(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$'
+            methods: '[a-z_][a-z0-9_]{2,30}$'
+        basic_function_redefined: true
+        basic_expression_not_assigned: true
+
 filter:
     excluded_paths:
         - '*/test/*'
+
 #tools:
 #    external_code_coverage:
 #        timeout: 600    # Timeout in seconds.
