objects: oso-perro-conejo-rana-taza-telefono

--- a/ocular_interaction/data/objects.yaml
+++ b/ocular_interaction/data/objects.yaml
@@ -1,12 +1,14 @@
 2D:
-  conejo: [4, 9]
-  leon: [1, 6]
-  oso: [2, 7]
-  perro: [0, 5]
-  rana: [3, 8]
+  conejo: [8, 9, 10, 11]
+  oso: [0, 1, 2, 3]
+  perro: [4, 5, 6, 7]
+  rana: [12, 13, 14, 15]
+  taza: [16, 17, 18, 19]
+  telefono: [20, 21, 22, 23]
 3D:
-  conejo: [4, 9]
-  leon: [1, 6]
-  oso: [2, 7]
-  perro: [0, 5]
-  rana: [3, 8]
+  conejo: [8, 9, 10, 11]
+  oso: [0, 1, 2, 3]
+  perro: [4, 5, 6, 7]
+  rana: [12, 13, 14, 15]
+  taza: [16, 17, 18, 19]
+  telefono: [20, 21, 22, 23]
