objects database: pelota-perro-tractor-taza

--- a/ocular_interaction/data/objects.yaml
+++ b/ocular_interaction/data/objects.yaml
@@ -1,14 +1,10 @@
 2D:
-  conejo: [8, 9, 10, 11]
-  oso: [0, 1, 2, 3]
-  perro: [4, 5, 6, 7]
-  rana: [12, 13, 14, 15]
-  taza: [16, 17, 18, 19]
-  telefono: [20, 21, 22, 23]
+  pelota: [0, 1, 2, 3]
+  perro: [8, 9, 10, 11]
+  taza: [12, 13, 14, 15]
+  tractor: [4, 5, 6, 7]
 3D:
-  conejo: [8, 9, 10, 11]
-  oso: [0, 1, 2, 3]
-  perro: [4, 5, 6, 7]
-  rana: [12, 13, 14, 15]
-  taza: [16, 17, 18, 19]
-  telefono: [20, 21, 22, 23]
+  pelota: [0, 1, 2, 3]
+  perro: [8, 9, 10, 11]
+  taza: [12, 13, 14, 15]
+  tractor: [4, 5, 6, 7]
